--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "@svgr/webpack": "^6.2.1",
     "ethers": "^5.6.9",
     "next": "12.1.6",
     "react": "18.2.0",
