--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-use": "^17.4.0",
     "wagmi": "^0.5.2"
   },
