--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-use": "^17.4.0",
+    "swiper": "^8.3.1",
     "wagmi": "^0.5.2"
   },
   "devDependencies": {
