--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
     "ethers": "^5.6.9",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-use": "^17.4.0",
     "swiper": "^8.3.1",
     "wagmi": "^0.5.2"
