--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@uniswap/redux-multicall": "^1.1.5",
     "@uniswap/token-lists": "^1.0.0-beta.30",
     "ajv": "^6.12.6",
+    "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
     "ethers": "^5.6.9",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
-    "next": "12.1.6",
+    "net": "^1.0.2",
+    "next": "^12.2.4",
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,6 +34,7 @@
     "react-use": "^17.4.0",
     "react-window": "^1.8.7",
     "swiper": "^8.3.1",
+    "tls": "^0.0.1",
     "wagmi": "^0.5.2"
   },
   "devDependencies": {
