--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@svgr/webpack": "^6.2.1",
     "@uniswap/redux-multicall": "^1.1.5",
     "@uniswap/token-lists": "^1.0.0-beta.30",
+    "@wagmi/core": "^0.5.3",
     "ajv": "^6.12.6",
     "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
@@ -35,7 +36,7 @@
     "react-window": "^1.8.7",
     "swiper": "^8.3.1",
     "tls": "^0.0.1",
-    "wagmi": "^0.5.2"
+    "wagmi": "^0.6.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.182",
