--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^8.0.2",
     "react-use": "^17.4.0",
     "react-window": "^1.8.7",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.3.1",
     "tls": "^0.0.1",
     "wagmi": "^0.6.3"
