--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-persist": "^6.0.0",
     "swiper": "^8.3.1",
     "tls": "^0.0.1",
+    "type-fest": "^2.18.0",
     "wagmi": "^0.6.3"
   },
   "devDependencies": {
