--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
     "react-window": "^1.8.7",
     "redux-persist": "^6.0.0",
@@ -46,6 +47,7 @@
     "@types/qs": "^6.9.7",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-slick": "^0.23.10",
     "@types/react-window": "^1.8.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
