--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
     "ethers": "^5.6.9",
+    "joi": "^17.6.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "net": "^1.0.2",
