--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "@mui/x-date-pickers": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
     "@uniswap/redux-multicall": "^1.1.5",
@@ -22,9 +23,11 @@
     "ajv": "^6.12.6",
     "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
+    "dayjs": "^1.11.5",
     "ethers": "^5.6.9",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "net": "^1.0.2",
     "next": "^12.2.4",
