--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.10.6",
     "@mui/x-date-pickers": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
