--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.99",
     "@mui/material": "^5.8.6",
+    "@mui/styles": "^5.10.6",
     "@mui/x-date-pickers": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
@@ -36,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "react-use": "^17.4.0",
