--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "start:dev": "env-cmd -f .env.development yarn start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -23,6 +24,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.30",
     "@wagmi/core": "^0.5.3",
     "ajv": "^6.12.6",
+    "axios": "^0.27.2",
     "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
     "dayjs": "^1.11.5",
