feat: create token

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
 NEXT_PUBLIC_API_URL=https://bionswap-796dw.ondigitalocean.app
+NEXT_PUBLIC_TOKEN_FEE_TO=0xEa9de5994d34aD46bCFdb87C49f2070810fA53CE
+NEXT_PUBLIC_TOKEN_FEE=0.1
