--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:dev": "env-cmd -f .env.development yarn build",
     "start": "next start",
     "start:dev": "env-cmd -f .env.development yarn start",
     "lint": "next lint"
@@ -28,6 +29,7 @@
     "binance-api-node": "^0.11.41",
     "cids": "^1.1.9",
     "dayjs": "^1.11.5",
+    "env-cmd": "^10.1.0",
     "ethers": "^5.6.9",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
