refactor: api url

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL=https://coral-app-zfgu3.ondigitalocean.app
+NEXT_PUBLIC_API_URL=https://bionswap-796dw.ondigitalocean.app
 NEXT_PUBLIC_TOKEN_FEE_TO=0xFF3B30ec8A0baebA26Bae7074f35016292306560
-NEXT_PUBLIC_TOKEN_FEE=0.5
+NEXT_PUBLIC_TOKEN_FEE=0.1
