--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "env-cmd": "^10.1.0",
     "ethers": "^5.6.9",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
@@ -54,6 +55,7 @@
     "wagmi": "^0.6.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
     "@types/qs": "^6.9.7",
