--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.8",
     "react-use": "^17.4.0",
     "react-window": "^1.8.7",
     "redux-persist": "^6.0.0",
