--- a/.env.production
+++ b/.env.production
@@ -2,3 +2,4 @@ NEXT_PUBLIC_API_URL=https://bionswap-796dw.ondigitalocean.app
 NEXT_PUBLIC_TOKEN_FEE_TO=0xFF3B30ec8A0baebA26Bae7074f35016292306560
 NEXT_PUBLIC_TOKEN_FEE=0.1
 NEXT_PUBLIC_LOG_KEY=D4626Bae707487C49f
+NEXT_PUBLIC_GOOGLE_ANALYTICS=G-SJ6H4EETKR
