--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^5.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
+    "@types/gtag.js": "^0.0.12",
     "@uniswap/redux-multicall": "^1.1.5",
     "@uniswap/token-lists": "^1.0.0-beta.30",
     "@wagmi/core": "^0.5.3",
