--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "nextjs-progressbar": "^0.0.16",
     "qs": "^6.11.0",
     "react": "18.2.0",
+    "react-countup": "^6.4.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.7.1",
     "react-images-uploading": "^3.1.7",
     "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
