fixed styled bug

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.8.6",
     "@mui/styles": "^5.10.6",
     "@mui/x-date-pickers": "^5.0.2",
+    "@radix-ui/react-hover-card": "^1.0.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@svgr/webpack": "^6.2.1",
     "@types/gtag.js": "^0.0.12",
@@ -32,6 +33,7 @@
     "dayjs": "^1.11.5",
     "env-cmd": "^10.1.0",
     "ethers": "^5.6.9",
+    "html-react-parser": "^3.0.4",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
