--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "@next/next/no-img-element": 0,
-    "react/display-name": 0
+    "react/display-name": 0,
+    "@next/next/no-server-import-in-page": "off"
   }
 }
