--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "moment": "^2.29.4",
     "nanoid": "^4.0.0",
     "net": "^1.0.2",
-    "next": "^12.2.4",
+    "next": "^13.1.1",
     "nextjs-progressbar": "^0.0.16",
     "qs": "^6.11.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-countup": "^6.4.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-images-uploading": "^3.1.7",
     "react-quill": "^2.0.0",
@@ -70,7 +70,7 @@
     "@types/react-slick": "^0.23.10",
     "@types/react-window": "^1.8.5",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.1",
     "typescript": "4.7.4"
   }
 }
