--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build:dev": "env-cmd -f .env.development yarn build",
     "start": "next start",
     "start:dev": "env-cmd -f .env.development yarn start",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build",
     "lint": "next lint"
   },
   "dependencies": {
@@ -62,6 +65,7 @@
     "wagmi": "^0.6.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.1.2",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.182",
     "@types/node": "18.0.0",
@@ -70,6 +74,7 @@
     "@types/react-dom": "18.0.5",
     "@types/react-slick": "^0.23.10",
     "@types/react-window": "^1.8.5",
+    "cross-env": "^7.0.3",
     "eslint": "8.18.0",
     "eslint-config-next": "^13.1.1",
     "typescript": "4.7.4"
