--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "cross-env": "^7.0.3",
     "eslint": "8.18.0",
     "eslint-config-next": "^13.1.1",
+    "eslint-config-prettier": "^8.6.0",
     "typescript": "4.7.4"
   }
 }
